Add ability to add provider from AddProviderActivity

--- a/APP/app/src/main/res/layout/activity_add_provider.xml
+++ b/APP/app/src/main/res/layout/activity_add_provider.xml
@@ -58,7 +58,7 @@
             <EditText
                 android:layout_width="0dp"
                 android:layout_height="30dp"
-                android:id="@+id/name-input"
+                android:id="@+id/name_input"
                 android:hint="Nom"
                 android:drawableLeft="@drawable/user_icon"
                 android:drawableTint="#353B48"
@@ -72,52 +72,53 @@
             <EditText
                 android:layout_width="0dp"
                 android:layout_height="30dp"
-                android:id="@+id/email-input"
+                android:id="@+id/email_input"
                 android:hint="Email"
                 android:drawableLeft="@drawable/email_icon"
                 android:drawableTint="#353B48"
                 android:drawablePadding="10dp"
                 android:paddingLeft="10dp"
                 android:background="@drawable/form_bg"
-                app:layout_constraintTop_toBottomOf="@+id/name-input"
-                app:layout_constraintBottom_toTopOf="@+id/phone-input"
+                app:layout_constraintTop_toBottomOf="@+id/name_input"
+                app:layout_constraintBottom_toTopOf="@+id/phone_input"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"/>
 
             <EditText
                 android:layout_width="0dp"
                 android:layout_height="30dp"
-                android:id="@+id/phone-input"
+                android:id="@+id/phone_input"
                 android:hint="Téléphone"
                 android:drawableLeft="@drawable/phone_icon"
                 android:drawableTint="#353B48"
                 android:drawablePadding="10dp"
                 android:paddingLeft="10dp"
                 android:background="@drawable/form_bg"
-                app:layout_constraintTop_toBottomOf="@+id/email-input"
-                app:layout_constraintBottom_toTopOf="@+id/address-input"
+                android:inputType="number"
+                app:layout_constraintTop_toBottomOf="@+id/email_input"
+                app:layout_constraintBottom_toTopOf="@+id/address_input"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"/>
 
             <EditText
                 android:layout_width="0dp"
                 android:layout_height="30dp"
-                android:id="@+id/address-input"
+                android:id="@+id/address_input"
                 android:hint="Adresse"
                 android:drawableLeft="@drawable/address_icon"
                 android:drawableTint="#353B48"
                 android:drawablePadding="10dp"
                 android:paddingLeft="10dp"
                 android:background="@drawable/form_bg"
-                app:layout_constraintTop_toBottomOf="@+id/phone-input"
-                app:layout_constraintBottom_toTopOf="@+id/description-input"
+                app:layout_constraintTop_toBottomOf="@+id/phone_input"
+                app:layout_constraintBottom_toTopOf="@+id/description_input"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"/>
 
             <EditText
                 android:layout_width="0dp"
                 android:layout_height="60dp"
-                android:id="@+id/description-input"
+                android:id="@+id/description_input"
                 android:orientation="vertical"
                 android:gravity="start"
                 android:paddingTop="10dp"
@@ -128,16 +129,17 @@
                 android:drawablePadding="10dp"
                 android:paddingLeft="10dp"
                 android:background="@drawable/form_bg"
-                app:layout_constraintTop_toBottomOf="@+id/address-input"
-                app:layout_constraintBottom_toTopOf="@+id/add-submit"
+                app:layout_constraintTop_toBottomOf="@+id/address_input"
+                app:layout_constraintBottom_toTopOf="@+id/add_submit"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"/>
 
             <Button
                 android:layout_height="wrap_content"
                 android:layout_width="wrap_content"
-                android:id="@+id/add-submit"
+                android:id="@+id/add_submit"
                 android:text="Ajouter"
+                android:onClick="addProvider"
                 android:textSize="15sp"
                 android:textColor="#353B48"
                 android:textAllCaps="false"
