--- a/APP/app/src/main/res/layout/list_row_item.xml
+++ b/APP/app/src/main/res/layout/list_row_item.xml
@@ -8,7 +8,7 @@
     android:layout_marginTop="5dp"
     android:id="@+id/container">
 
-    <LinearLayout
+    <android.support.constraint.ConstraintLayout
         android:id="@+id/provider_wrapper"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -18,8 +18,12 @@
         android:background="@drawable/rounded_edge">
 
         <android.support.constraint.ConstraintLayout
+            android:id="@+id/card-wrapper"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent">
 
 
             <TextView
@@ -69,29 +73,28 @@
                 app:layout_constraintTop_toBottomOf="@id/provider_address"
                 app:layout_constraintLeft_toLeftOf="parent"/>
 
-
-            <ImageButton
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@null"
-                android:src="@drawable/edit_icon"
-                android:tint="#000000"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/provider_description"
-                app:layout_constraintBottom_toBottomOf="parent"/>
-
-            <ImageButton
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@null"
-                android:src="@drawable/delete_icon"
-                android:tint="#e74c3c"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/provider_description"
-                app:layout_constraintBottom_toBottomOf="parent"/>
-
         </android.support.constraint.ConstraintLayout>
 
-    </LinearLayout>
+        <ImageButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@null"
+            android:src="@drawable/edit_icon"
+            android:tint="#000000"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/card-wrapper"
+            app:layout_constraintBottom_toBottomOf="parent"/>
+
+        <ImageButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@null"
+            android:src="@drawable/delete_icon"
+            android:tint="#e74c3c"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/card-wrapper"
+            app:layout_constraintBottom_toBottomOf="parent"/>
+
+    </android.support.constraint.ConstraintLayout>
 
 </LinearLayout>
