--- a/APP/app/src/main/res/layout/activity_edit_provider.xml
+++ b/APP/app/src/main/res/layout/activity_edit_provider.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/bg_gradient"
-    tools:context=".ConnectionActivity">
+    tools:context=".EditProviderActivity">
 
     <TextView
         android:layout_width="wrap_content"
@@ -16,21 +16,22 @@
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="350dp"
-        android:layout_height="300dp"
+        android:layout_height="500dp"
         android:background="@drawable/content_wrapper"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent">
-        
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/form-title"
-            android:text="Connexion"
-            android:textSize="30sp"
+            android:text="Modification d'un fournisseur"
+            android:textSize="20sp"
             android:textColor="#353B48"
             android:letterSpacing="0.2"
+            android:gravity="center"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toTopOf="@+id/form-wrapper"
             app:layout_constraintLeft_toLeftOf="parent"
@@ -48,20 +49,19 @@
 
         <android.support.constraint.ConstraintLayout
             android:layout_width="250dp"
-            android:layout_height="150dp"
+            android:layout_height="300dp"
             android:id="@+id/form-wrapper"
             app:layout_constraintTop_toBottomOf="@+id/line-break"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent">
-            
+
             <EditText
                 android:layout_width="0dp"
                 android:layout_height="30dp"
-                android:id="@+id/emailInput"
-                android:inputType="text"
-                android:hint="Email"
-                android:drawableLeft="@drawable/email_icon"
+                android:id="@+id/name_input"
+                android:hint="Nom"
+                android:drawableLeft="@drawable/user_icon"
                 android:drawableTint="#353B48"
                 android:drawablePadding="10dp"
                 android:paddingLeft="10dp"
@@ -73,25 +73,74 @@
             <EditText
                 android:layout_width="0dp"
                 android:layout_height="30dp"
-                android:id="@+id/passwordInput"
-                android:inputType="textPassword"
-                android:hint="Mot de passe"
-                android:drawableLeft="@drawable/password_icon"
+                android:id="@+id/email_input"
+                android:hint="Email"
+                android:drawableLeft="@drawable/email_icon"
                 android:drawableTint="#353B48"
                 android:drawablePadding="10dp"
                 android:paddingLeft="10dp"
                 android:background="@drawable/form_bg"
-                app:layout_constraintTop_toBottomOf="@+id/emailInput"
-                app:layout_constraintBottom_toTopOf="@+id/connectButton"
+                app:layout_constraintTop_toBottomOf="@+id/name_input"
+                app:layout_constraintBottom_toTopOf="@+id/phone_input"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"/>
+
+            <EditText
+                android:layout_width="0dp"
+                android:layout_height="30dp"
+                android:id="@+id/phone_input"
+                android:hint="Téléphone"
+                android:drawableLeft="@drawable/phone_icon"
+                android:drawableTint="#353B48"
+                android:drawablePadding="10dp"
+                android:paddingLeft="10dp"
+                android:background="@drawable/form_bg"
+                android:inputType="number"
+                app:layout_constraintTop_toBottomOf="@+id/email_input"
+                app:layout_constraintBottom_toTopOf="@+id/address_input"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"/>
+
+            <EditText
+                android:layout_width="0dp"
+                android:layout_height="30dp"
+                android:id="@+id/address_input"
+                android:hint="Adresse"
+                android:drawableLeft="@drawable/address_icon"
+                android:drawableTint="#353B48"
+                android:drawablePadding="10dp"
+                android:paddingLeft="10dp"
+                android:background="@drawable/form_bg"
+                app:layout_constraintTop_toBottomOf="@+id/phone_input"
+                app:layout_constraintBottom_toTopOf="@+id/description_input"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"/>
+
+            <EditText
+                android:layout_width="0dp"
+                android:layout_height="60dp"
+                android:id="@+id/description_input"
+                android:orientation="vertical"
+                android:gravity="start"
+                android:paddingTop="10dp"
+                android:inputType="textMultiLine"
+                android:hint="Description"
+                android:drawableLeft="@drawable/message_icon"
+                android:drawableTint="#353B48"
+                android:drawablePadding="10dp"
+                android:paddingLeft="10dp"
+                android:background="@drawable/form_bg"
+                app:layout_constraintTop_toBottomOf="@+id/address_input"
+                app:layout_constraintBottom_toTopOf="@+id/modify_submit"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"/>
 
             <Button
                 android:layout_height="wrap_content"
                 android:layout_width="wrap_content"
-                android:id="@+id/connectButton"
-                android:text="Se connecter"
-                android:onClick="checkUser"
+                android:id="@+id/modify_submit"
+                android:text="Modifier"
+                android:onClick="updateProvider"
                 android:textSize="15sp"
                 android:textColor="#353B48"
                 android:textAllCaps="false"
