--- a/APP/app/src/main/res/layout/list_row_item.xml
+++ b/APP/app/src/main/res/layout/list_row_item.xml
@@ -76,6 +76,7 @@
         </android.support.constraint.ConstraintLayout>
 
         <ImageButton
+            android:id="@+id/provider_edit"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@null"
@@ -86,6 +87,7 @@
             app:layout_constraintBottom_toBottomOf="parent"/>
 
         <ImageButton
+            android:id="@+id/provider_delete"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@null"
