--- a/APP/app/src/main/res/layout/activity_list.xml
+++ b/APP/app/src/main/res/layout/activity_list.xml
@@ -17,6 +17,20 @@
         android:elevation="3dp"
         />
 
+    <ImageButton
+        android:id="@+id/button_logout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/roundlogoutbutton"
+        android:src="@drawable/logout_icon"
+        android:scaleType="fitCenter"
+        android:padding="10dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_margin="25dp"
+        android:elevation="3dp"
+        />
+
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recyclerviewid"
         android:layout_width="match_parent"
