--- a/APP/app/src/main/res/layout/activity_add_provider.xml
+++ b/APP/app/src/main/res/layout/activity_add_provider.xml
@@ -7,12 +7,19 @@
     android:background="@drawable/bg_gradient"
     tools:context=".AddProviderActivity">
 
-    <TextView
+    <ImageView
+        android:id="@+id/logo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Logo"
-        android:paddingLeft="30dp"
-        android:paddingTop="30dp"/>
+        android:adjustViewBounds="true"
+        android:scaleType="fitCenter"
+        android:maxWidth="120dp"
+        android:maxHeight="70dp"
+        android:src="@drawable/viabricologo"
+        android:background="@drawable/logo"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_margin="15dp"/>
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="350dp"
