Adding screen shots of the application

--- a/APP/app/src/main/res/layout/activity_add_provider.xml
+++ b/APP/app/src/main/res/layout/activity_add_provider.xml
@@ -71,6 +71,8 @@
                 android:drawableTint="#353B48"
                 android:drawablePadding="10dp"
                 android:paddingLeft="10dp"
+                android:maxLines="1"
+                android:inputType="text"
                 android:background="@drawable/form_bg"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
@@ -85,6 +87,8 @@
                 android:drawableTint="#353B48"
                 android:drawablePadding="10dp"
                 android:paddingLeft="10dp"
+                android:maxLines="1"
+                android:inputType="text"
                 android:background="@drawable/form_bg"
                 app:layout_constraintTop_toBottomOf="@+id/name_input"
                 app:layout_constraintBottom_toTopOf="@+id/phone_input"
@@ -116,6 +120,8 @@
                 android:drawableTint="#353B48"
                 android:drawablePadding="10dp"
                 android:paddingLeft="10dp"
+                android:maxLines="1"
+                android:inputType="text"
                 android:background="@drawable/form_bg"
                 app:layout_constraintTop_toBottomOf="@+id/phone_input"
                 app:layout_constraintBottom_toTopOf="@+id/description_input"
