--- a/APP/app/src/main/res/layout/activity_edit_provider.xml
+++ b/APP/app/src/main/res/layout/activity_edit_provider.xml
@@ -72,6 +72,8 @@
                 android:drawableTint="#353B48"
                 android:drawablePadding="10dp"
                 android:paddingLeft="10dp"
+                android:maxLines="1"
+                android:inputType="text"
                 android:background="@drawable/form_bg"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
@@ -86,6 +88,8 @@
                 android:drawableTint="#353B48"
                 android:drawablePadding="10dp"
                 android:paddingLeft="10dp"
+                android:maxLines="1"
+                android:inputType="text"
                 android:background="@drawable/form_bg"
                 app:layout_constraintTop_toBottomOf="@+id/name_input"
                 app:layout_constraintBottom_toTopOf="@+id/phone_input"
@@ -117,6 +121,8 @@
                 android:drawableTint="#353B48"
                 android:drawablePadding="10dp"
                 android:paddingLeft="10dp"
+                android:maxLines="1"
+                android:inputType="text"
                 android:background="@drawable/form_bg"
                 app:layout_constraintTop_toBottomOf="@+id/phone_input"
                 app:layout_constraintBottom_toTopOf="@+id/description_input"
